--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   font-family: "VHS";
-  background: red;
+  background: rgba(0, 0, 255);
   opacity: 0.98;
 }
 
@@ -40,8 +40,9 @@
   position: fixed;
   grid-column: 1/2;
   /* border-right: solid white 6px; */
-  background: red !important;
+  background: rgba(0, 0, 255, 0.8) !important;
   height: 100vh !important;
+  opacity: 0.9;
 }
 
 .main-right {
@@ -52,7 +53,7 @@
 
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background: red;
+  background: rgba(0, 0, 255, 0.8);
 }
 
 /* ABOUT SECTION */
@@ -69,8 +70,10 @@
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 40px;
-  color: white;
-  transition: 0.3s;
+  color: #ffffff;
+  filter: blur(0.4px);
+  text-shadow: 0px 0px 3px #333333;
+
   display: block;
 }
 
@@ -125,15 +128,15 @@
   z-index: 2;
   padding: 10px;
   margin: 10px;
-  width: 310px;
-  height: 35image shadow css 0px;
+  width: 320px;
+  height: 35px 0px;
   /* border: 1px solid black; */
-  box-shadow: 0px 0px 1px 1px red;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 255, 0.8);
   opacity: 1 !important;
 }
 
 .album:hover {
-  background: red !important;
+  background: rgba(0, 0, 255, 0.8) !important;
   color: white;
   transition: 0.3s;
 }
@@ -155,33 +158,57 @@
 }
 
 .album:hover h3 {
-  background: red;
+  background: rgba(0, 0, 255, .0) !important;
 }
 
 .album:hover span {
-  background: red;
+  background: rgba(0, 0, 255, 0.0);
 }
 
 /* Video Section */
 
 .video-section {
-  padding: 10px 10px 10px 10px;
-  margin: 20px 20px;
+  padding: 10px 20px 10px 20px;
+  margin: 40px 20px;
   width: auto;
-  height: 1000px;
+  height: fit-content;
   border: solid white 2px;
   background: white;
   display: flex;
   flex-direction: column;
 }
 
-.video-section iframe {
+#video-header{
+padding-bottom: 20px;
+}
+
+.video {
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 20px 20px 0 20px;
+  
   background: white;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 255, 0.8);
+  margin: 20;
+  margin-bottom: 40px; 
+}
+
+.video:hover {
+  background: rgba(0, 0, 255, 0.8);
+}
+
+.video:hover .video-title{
+  background: rgba(0, 0, 255, 0.0);
+  color: white
+}
+
+.video iframe {
+  margin-bottom: 20px;
+  margin: 10px 10px 10px 10px;
+  width: 97%;
+  height: 400px;
+  
+
+
 }
 
 #video-header {
