--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@
   z-index: 2;
   padding: 10px;
   margin: 10px;
-  width: 320px;
+  width: 310px;
   height: 35px 0px;
   /* border: 1px solid black; */
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 255, 0.8);
@@ -158,11 +158,11 @@
 }
 
 .album:hover h3 {
-  background: rgba(0, 0, 255, .0) !important;
+  background: rgba(0, 0, 255, 0) !important;
 }
 
 .album:hover span {
-  background: rgba(0, 0, 255, 0.0);
+  background: rgba(0, 0, 255, 0);
 }
 
 /* Video Section */
@@ -178,27 +178,27 @@
   flex-direction: column;
 }
 
-#video-header{
-padding-bottom: 20px;
+#video-header {
+  padding-bottom: 20px;
 }
 
 .video {
   align-items: center;
   justify-content: center;
-  
+
   background: white;
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 255, 0.8);
   margin: 20;
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
 }
 
 .video:hover {
   background: rgba(0, 0, 255, 0.8);
 }
 
-.video:hover .video-title{
-  background: rgba(0, 0, 255, 0.0);
-  color: white
+.video:hover .video-title {
+  background: rgba(0, 0, 255, 0);
+  color: white;
 }
 
 .video iframe {
@@ -206,9 +206,6 @@ padding-bottom: 20px;
   margin: 10px 10px 10px 10px;
   width: 97%;
   height: 400px;
-  
-
-
 }
 
 #video-header {
