--- a/styles.css
+++ b/styles.css
@@ -48,25 +48,6 @@
   height: 100vh !important;
   opacity: 0.9;
 }
-@media only screen and (max-width: 1000px) {
-  .main-left {
-    display: none;
-  }
-  .site-container {
-    display: flex;
-    /* grid-template-columns: 1000px; */
-    /* height: 100vh; */
-    background-color: black;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-  }
-
-  .site-content {
-    border-left: solid white 4px;
-    border-right: solid white 4px;
-    overflow: hidden;
-  }
-}
 
 .main-right {
   grid-column: 2/3;
@@ -140,6 +121,12 @@
 #audio-header {
   margin: 15px 0;
   background: white;
+}
+
+.audio-subtext {
+  background: none;
+  font-family: "Lato";
+  padding-bottom: 20px;
 }
 
 .album-grid {
