--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,6 @@
   margin: 0;
   padding: 0;
   font-family: "VHS";
-  background: rgba(0, 0, 255);
-  opacity: 0.98;
 }
 
 .highlight {
@@ -25,28 +23,37 @@
 .site-container {
   display: grid;
   grid-template-columns: 1fr 1000px 1fr;
-  /* height: 100vh; */
+  /* background-color:rgba(0, 0, 255, 0.2); */
   background-color: black;
+  z-index: 0;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
 .site-content {
+  margin-top: 20px;
+  margin-bottom: 20px;
   grid-column: 2/3;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  border-left: solid white 4px;
-  border-right: solid white 4px;
-  overflow: hidden;
+  /* border-top: solid black 4px;
+  border-left: solid black 4px;
+  border-right: solid black 4px;
+  border-bottom: solid black 4px; */
+  box-shadow: white 2px 2px 1px, white -2px 2px 1px, white -2px -2px 1px,
+    white 2px -2px 1px, white 0px 2px 1px, white 0px -2px 1px, white 2px 0px 1px,
+    white -2px 0px 1px;
 }
 
 @media screen and (max-width: 1000px) {
   .site-container {
     display: flex;
+    width: 100%;
   }
   .site-content {
     align-items: center;
     justify-content: center;
+    display: flex;
   }
   .main-left {
     display: none;
@@ -54,16 +61,28 @@
   .main-right {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .album {
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: max-content !important;
+    flex-grow: 1;
+  }
+  .album iframe {
+    width: 100% !important;
+    /* height: fit-content !important; */
+    flex-grow: 1;
   }
 }
 
 .main-left {
-  position: fixed;
   grid-column: 1/2;
-  /* border-right: solid white 6px; */
-  background: rgba(0, 0, 255, 0.8) !important;
-  height: 100vh !important;
-  opacity: 0.9;
+  background: rgba(0, 0, 255, 0.7) !important;
+  position: sticky;
+  top: 0;
 }
 
 .main-right {
@@ -74,15 +93,16 @@
 
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background: rgba(0, 0, 255, 0.8);
+  background: rgba(0, 0, 255, 0.7);
 }
 
 /* ABOUT SECTION */
 
 .nav-links {
+  position: sticky;
   top: 0; /* Stay at the top */
   left: 0;
-  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow-x: hidden;
   padding-top: 60px;
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
@@ -94,73 +114,109 @@
   color: #ffffff;
   filter: blur(0.4px);
   text-shadow: 0px 0px 3px #333333;
+  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 
   display: block;
 }
 
 .about-section {
-  padding: 10px 10px 10px 10px;
-  margin: 60px 20px;
+  padding: 20px 30px 30px 30px;
+  margin: 60px 80px 60px 40px;
   width: auto;
   height: fit-content;
   border: solid white 2px;
-  background-color: white;
+  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 #main-img {
   width: 100%;
   height: auto;
+  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 .about-content {
-  background-color: white;
   font-size: 18px;
-  font-family: "Lato";
+  font-family: "VHS";
   margin: 20px 0;
+  color: white;
+  letter-spacing: 3px;
+  line-height: 30px;
 }
 
 #about-name {
   margin: 10px 0 15px 0;
-  background-color: white;
+  letter-spacing: 8px;
+  font-size: 40px;
+
+  color: white;
+  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 /* Audio Section */
 
 .audio-section {
-  padding: 10px 10px 10px 10px;
-  margin: 20px 20px;
+  padding: 20px 30px 30px 30px;
+  margin: 60px 80px 60px 40px;
   width: auto;
   height: fit-content;
   border: solid white 2px;
-  background: white;
+  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 #audio-header {
-  margin: 15px 0;
-  background: white;
+  margin: 10px 0 15px 0;
+  letter-spacing: 8px;
+  font-size: 40px;
+  color: white;
+  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 .audio-subtext {
-  background: none;
-  font-family: "Lato";
-  padding-bottom: 20px;
+  font-size: 18px;
+  font-family: "VHS";
+  margin: 20px 0;
+  color: white;
+  letter-spacing: 3px;
+  line-height: 30px;
 }
 
 .album-grid {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  background: white;
 }
 .album {
-  background: white;
-  z-index: 2;
-  padding: 10px;
-  margin: 10px;
-  width: 310px;
-  height: 35px 0px;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: fit-content;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
   /* border: 1px solid black; */
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 255, 0.8);
-  opacity: 1 !important;
+}
+
+.album iframe {
+  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
+  width: 250px;
+  height: 250px;
+  margin-bottom: 20px;
 }
 
 .album:hover {
@@ -175,16 +231,20 @@
 }
 
 .album-title {
-  background: white;
   padding-top: 10px;
-  font-family: "Lato";
+  font-family: "VHS";
+  letter-spacing: 2px;
+  line-height: 25px;
+  color: white;
 }
 
 .italics {
-  background: white;
   font-style: italic;
   font-weight: 900;
-  font-family: "Lato";
+  color: white;
+  letter-spacing: 2px;
+
+  font-family: "VHS";
 }
 
 .album:hover h3 {
@@ -198,26 +258,35 @@
 /* Video Section */
 
 .video-section {
-  padding: 10px 20px 10px 20px;
-  margin: 40px 20px;
+  padding: 20px 30px 30px 30px;
+  margin: 60px 80px 60px 40px;
   width: auto;
   height: fit-content;
   border: solid white 2px;
-  background: white;
   display: flex;
   flex-direction: column;
+  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 #video-header {
+  margin: 10px 0 15px 0;
   padding-bottom: 20px;
+  letter-spacing: 8px;
+  font-size: 40px;
+  color: white;
+  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
 }
 
 .video {
   align-items: center;
   justify-content: center;
-
-  background: white;
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 255, 0.8);
+  box-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
   margin: 20;
   margin-bottom: 40px;
 }
@@ -239,14 +308,16 @@
 }
 
 #video-header {
-  background: white;
   margin: 15px 0;
 }
 
 .video-title {
-  background: white;
-  font-family: "Lato";
+  font-family: "VHS";
   margin: 10px 25px 20px;
+  color: white;
+  background: none;
+  letter-spacing: 3px;
+  line-height: 30px;
 }
 
 /* Player Section */
@@ -257,4 +328,131 @@
   padding: 0;
 }
 .audio-player iframe {
+}
+
+/* Contact Section  */
+
+.contact-section {
+  padding: 20px 30px 30px 30px;
+  margin: 60px 80px 60px 40px;
+  width: auto;
+  height: fit-content;
+  border: solid white 2px;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-header-container {
+  width: 100%;
+}
+
+#contact-header {
+  margin: 10px 0 15px 0;
+  padding-bottom: 20px;
+  letter-spacing: 8px;
+  font-size: 40px;
+  color: white;
+  text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
+    black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
+    black -2px 0px 1px;
+}
+.contact-main {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  padding: 30px;
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+#contact-form input,
+textarea {
+  border: none;
+  border-bottom: 4px solid white;
+  border-left: 4px solid white;
+  font-size: 20px;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  background: none;
+  color: white;
+  resize: none;
+}
+
+#contact-form input {
+  height: 30px;
+  width: 100%;
+}
+#contact-form textarea {
+  height: 180px;
+  width: 100%;
+}
+
+#contact-form h2 {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  color: white;
+  letter-spacing: 12px;
+  line-height: 40px;
+}
+
+#contact-form input,
+textarea:focus {
+  outline: none;
+}
+
+#contact-form button {
+  margin-left: 20px;
+
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-size: 32px;
+  width: 100%;
+}
+
+#contact-form button:hover {
+  background: black;
+  color: white;
+}
+
+.contact-subtext {
+  font-size: 18px;
+  font-family: "VHS";
+  margin: 20px 0 40px 0;
+  color: white;
+  letter-spacing: 3px;
+  line-height: 30px;
+}
+
+.contact-subtext a {
+  color: white;
+}
+
+/* THANK YOU */
+
+#thank-you-body {
+    background: rgba(0, 0, 255, 0.7) !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20%;
+}
+
+.thank-you-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.thank-you-container h1 {
+  color: white;
+  font-size: 80px;
+  margin-bottom: 30px;
+}
+
+.back {
+  font-size: 40px;
 }
