--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: VHS;
-  src: url("./assets/VCR_OSD_MONO_1.001.ttf");
+  src: url("./assets/Lucida-Grande-Bold.ttf");
 }
 @font-face {
   font-family: Lato;
-  src: url("./assets/Lato-Regular.ttf");
+  src: url("./assets/Lucida-Grande-Regular.ttf");
 }
 
 * {
@@ -23,6 +23,7 @@
 .site-container {
   display: grid;
   grid-template-columns: 1fr 1000px 1fr;
+  grid-template-rows: 150px auto;
   /* background-color:rgba(0, 0, 255, 0.2); */
   background-color: black;
   z-index: 0;
@@ -40,9 +41,28 @@
   border-left: solid black 4px;
   border-right: solid black 4px;
   border-bottom: solid black 4px; */
-  box-shadow: white 2px 2px 1px, white -2px 2px 1px, white -2px -2px 1px,
-    white 2px -2px 1px, white 0px 2px 1px, white 0px -2px 1px, white 2px 0px 1px,
-    white -2px 0px 1px;
+}
+
+.header-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: 2/3;
+}
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: flex !important;
+  grid-column: 1/3;
+}
+.logo {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -80,9 +100,10 @@
 
 .main-left {
   grid-column: 1/2;
-  background: rgba(0, 0, 255, 0.7) !important;
+  background: black !important;
   position: sticky;
   top: 0;
+  margin: 10px;
 }
 
 .main-right {
@@ -91,9 +112,13 @@
   flex-direction: column;
   overflow-y: visible;
 
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background: rgba(0, 0, 255, 0.7);
+  /* background-repeat: no-repeat; */
+  /* background-attachment: fixed; */
+  /* background: rgba(0, 0, 255, 0.7); */
+  background-image: url("./assets/gradient-long.jpg");
+  box-shadow: white 2px 2px 1px, white -2px 2px 1px, white -2px -2px 1px,
+    white 2px -2px 1px, white 0px 2px 1px, white 0px -2px 1px, white 2px 0px 1px,
+    white -2px 0px 1px;
 }
 
 /* ABOUT SECTION */
@@ -110,7 +135,7 @@
 .nav-links a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 40px;
+  font-size: 30px;
   color: #ffffff;
   filter: blur(0.4px);
   text-shadow: 0px 0px 3px #333333;
@@ -419,8 +444,9 @@ textarea:focus {
 
   margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 32px;
+  font-size: 22px;
   width: 100%;
+  height: 40px;
 }
 
 #contact-form button:hover {
