--- a/styles.css
+++ b/styles.css
@@ -536,7 +536,7 @@ textarea:focus {
     font-size: 20px;
     color: #ffffff;
     /* filter: blur(0.4px); */
-    text-shadow: 0px 0px 3px #333333;
+    /* text-shadow: 0px 0px 3px #333333; */
     text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
       black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px,
       black 2px 0px 1px, black -2px 0px 1px;
