--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@
   border-left: 10px solid white;
 }
 
+h3 {
+  font-size: 16px;
+}
 .site-container {
   display: grid;
   grid-template-columns: 1fr 1100px 1fr;
@@ -106,14 +109,15 @@
   top: 0; /* Stay at the top */
   left: 0;
   overflow-x: hidden;
-  padding-top: 60px;
+  padding-top: 40px;
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
 .nav-links a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 20px;
+  margin-bottom: 20px;
   color: #ffffff;
   text-shadow: 0px 0px 3px #333333;
   text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
@@ -145,7 +149,7 @@
 }
 
 .about-content {
-  font-size: 16px;
+  font-size: 14px;
   font-family: "Lato" !important;
   margin: 20px 0;
   color: white;
@@ -156,7 +160,6 @@
 #about-name {
   margin: 10px 0 15px 0;
   letter-spacing: 8px;
-  font-size: 40px;
   padding-bottom: 15px;
 
   color: white;
@@ -181,7 +184,7 @@
 #audio-header {
   margin: 10px 0 15px 0;
   letter-spacing: 8px;
-  font-size: 40px;
+  font-size: 30px;
   color: white;
   text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
     black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
@@ -189,7 +192,7 @@
 }
 
 .audio-subtext {
-  font-size: 18px;
+  font-size: 14px;
   font-family: "Lato";
   margin: 20px 0;
   color: white;
@@ -289,7 +292,7 @@ figcaption {
   margin: 10px 0 15px 0;
   padding-bottom: 20px;
   letter-spacing: 8px;
-  font-size: 40px;
+  font-size: 30px;
   color: white;
   text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
     black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
@@ -365,7 +368,7 @@ figcaption {
   margin: 10px 0 15px 0;
   padding-bottom: 20px;
   letter-spacing: 8px;
-  font-size: 40px;
+  font-size: 30px;
   color: white;
   text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
     black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px, black 2px 0px 1px,
@@ -388,9 +391,10 @@ textarea {
   border: none;
   border-bottom: 4px solid white;
   border-left: 4px solid white;
-  font-size: 20px;
+  font-size: 14px;
   margin-bottom: 30px;
   margin-left: 20px;
+  padding: 12px;
   background: none;
   color: white;
   resize: none;
@@ -423,7 +427,7 @@ textarea:focus {
 
   margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 22px;
+  font-size: 18px;
   width: 100%;
   height: 40px;
 }
@@ -434,7 +438,7 @@ textarea:focus {
 }
 
 .contact-subtext {
-  font-size: 18px;
+  font-size: 14px;
   font-family: "Lato";
   margin: 20px 0 40px 0;
   color: white;
@@ -482,6 +486,16 @@ textarea:focus {
     padding-left: 100px;
     padding-right: 100px;
   }
+  h2 {
+    font-size: 14px;
+  }
+  h3 {
+    font-size: 14px;
+  }
+
+  #audio-header {
+    font-size: 20px;
+  }
   .site-content {
     align-items: center;
     justify-content: center;
@@ -508,8 +522,6 @@ textarea:focus {
     display: flex !important;
     align-items: center;
     justify-content: center;
-    height: fit-content;
-    grid-column: 2/3;
     flex-direction: row;
     width: 100%;
     margin-bottom: 40px;
@@ -522,17 +534,13 @@ textarea:focus {
     left: 0;
     overflow-x: hidden;
     align-items: center;
-    padding-top: 0px;
-    padding-bottom: 10px;
-    margin-top: 0;
-    margin-bottom: 0;
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     display: flex !important;
     width: 100%;
+    height: fit-content;
     justify-content: center;
-    height: 50px;
     background: black;
-    margin-bottom: 20px;
+    padding-top: 0;
   }
   .nav-links a {
     /* padding: 8px 8px 8px 32px; */
@@ -544,7 +552,9 @@ textarea:focus {
       black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px,
       black 2px 0px 1px, black -2px 0px 1px;
 
-    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
   }
 
   .about-content {
@@ -596,7 +606,7 @@ textarea:focus {
   #audio-header {
     margin: 10px 0 15px 0;
     letter-spacing: 8px;
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     text-shadow: black 2px 2px 1px, black -2px 2px 1px, black -2px -2px 1px,
       black 2px -2px 1px, black 0px 2px 1px, black 0px -2px 1px,
