--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,12 @@
   ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
 }
 
+body > div {
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-overflow-scrolling: touch;
+}
+
 .highlight {
   border-left: 10px solid white;
 }
