--- a/styles.css
+++ b/styles.css
@@ -713,7 +713,33 @@ textarea:focus {
 }
 
 @media screen and (max-width: 600px) {
-   .album-grid {
+  .site-container {
+    width: 100%;
+    display: flex;
+  }
+
+  .main-left {
+    width: 300%;
+  }
+
+  .nav-links {
+    width: 100%;
+    /* padding: 0; */
+    margin: 0;
+  }
+
+  .nav-links a {
+    /* padding: 0; */
+    margin: 0;
+  }
+
+  .site-content {
+    align-items: center;
+    justify-content: center;
+    zoom: 0.8;
+    -moz-transform: scale(0.8);
+  }
+  .album-grid {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -738,5 +764,4 @@ textarea:focus {
     padding: 0;
     margin: 0;
   }
-  
 }
