--- a/styles.css
+++ b/styles.css
@@ -714,7 +714,7 @@ textarea:focus {
 
 @media screen and (max-width: 600px) {
   .site-container {
-    width: 100%;
+    width: auto;
     display: flex;
   }
 
