--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,9 @@
   image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
   image-rendering: crisp-edges;
   ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
-  scroll-behavior: smooth
+  scroll-behavior: smooth;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 body > div {
@@ -719,7 +721,6 @@ textarea:focus {
     display: flex;
     overflow-x: hidden;
   }
-  
 
   .main-left {
     width: 300%;
