--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ h3 {
   grid-column: 2/3;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
+  overflow-x: hidden;
   /* border-top: solid black 4px;
   border-left: solid black 4px;
   border-right: solid black 4px;
