--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
   image-rendering: crisp-edges;
   ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body > div {
@@ -52,7 +52,7 @@ h3 {
   grid-column: 2/3;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  
+
   /* border-top: solid black 4px;
   border-left: solid black 4px;
   border-right: solid black 4px;
