--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ h3 {
 .main-left {
   grid-column: 1/2;
   background: black !important;
-  position: sticky;
+  position: sticky !important;
   top: 0;
   left: 0;
   margin: 0px;
